fixed maxwidth image issue on mobile

--- a/styles/sass/partials/_media-queries.scss
+++ b/styles/sass/partials/_media-queries.scss
@@ -162,6 +162,7 @@
 		margin: 35px auto;
 		width: 100%;
 		display: block;
+		max-width: none;
 		img {
 			width: 100%;
 		}
